# OpenRC-Turbo

./: .gitattributes  .gitignore  .gitmodules  build.common.gradle  build.gradle  genDocs.bat  gradle.properties  index.html  maven_scraper.sh  moduleFlavors.gradle  readme.md  settings.gradle
RobotCore/: Android.mk  Application.mk  CMakeLists.txt  build.gradle  versionNumbers.properties
RobotCore/src/main/: AndroidManifest.xml
RobotCore/src/main/assets/updates/Expansion Hub Firmware/: README.txt
RobotCore/src/main/cpp/include/: JniEnv.h  ftc.h  libuvc.h  utlist.h
RobotCore/src/main/cpp/include/Vuforia/: ExternalProvider.h  Vuforia.h  Vuforia_Android.h
RobotCore/src/main/cpp/libusb/: core.c  descriptor.c  hotplug.c  io.c  libusb.h  libusbi.h
RobotCore/src/main/cpp/libusb/android/: config.h
RobotCore/src/main/cpp/libusb/os/: linux_netlink.c  linux_usbfs.c  linux_usbfs.h  threads_posix.h
RobotCore/src/main/cpp/libuvc/include/libuvc/: libuvc_internal.h  usbconstants.h
RobotCore/src/main/cpp/libuvc/src/: ctrl-gen.cpp  ctrl.cpp  device.cpp  devicehandle.cpp  diag.cpp  frame.cpp  init.cpp  stream.cpp  streamhandle.cpp
RobotCore/src/main/cpp/libuvc/src/jni/: jni.cpp  jni_bmpwriter.cpp  jni_context.cpp  jni_device.cpp  jni_devicedescriptor.cpp  jni_devicehandle.cpp  jni_deviceinfo.cpp  jni_formatdesc.cpp  jni_frame.cpp  jni_framedesc.cpp  jni_libusb_device.cpp  jni_nativeobject.cpp  jni_streamcontrol.cpp  jni_streamhandle.cpp  jni_streaminginterface.cpp
RobotCore/src/main/cpp/system/: SerialPort.cpp  time.cpp
RobotCore/src/main/cpp/vuforia/: NativeVuforiaWebcam.cpp  NativeVuforiaWebcam.h  VuforiaExternalProviderDelegator.h
RobotCore/src/main/java/com/qualcomm/robotcore/eventloop/: EventLoop.java  EventLoopManager.java
RobotCore/src/main/java/com/qualcomm/robotcore/eventloop/opmode/: Autonomous.java  EventLoopManagerClient.java  LinearOpMode.java  OpMode.java  OpModeManagerImpl.java  OpModeManagerNotifier.java
RobotCore/src/main/java/com/qualcomm/robotcore/exception/: RobotProtocolException.java
RobotCore/src/main/java/com/qualcomm/robotcore/hardware/: Blinker.java  ColorRangeSensor.java  ColorSensor.java  ControlSystem.java  DcMotorControllerEx.java  DcMotorEx.java  DcMotorImplEx.java  DeviceManager.java  Gamepad.java  Gyroscope.java  HardwareDevice.java  HardwareMap.java  I2cDevice.java  I2cDeviceSynchDevice.java  I2cDeviceSynchDeviceWithParameters.java  I2cDeviceSynchImpl.java  I2cDeviceSynchImplOnSimple.java  I2cDeviceSynchSimple.java  I2cWarningManager.java  LED.java  LynxModuleMeta.java  LynxModuleMetaList.java  MotorControlAlgorithm.java  NormalizedColorSensor.java  PwmControl.java  RobotCoreLynxController.java  RobotCoreLynxModule.java  RobotCoreLynxUsbDevice.java  TimestampedI2cData.java  USBAccessibleLynxModule.java
RobotCore/src/main/java/com/qualcomm/robotcore/hardware/configuration/: BuiltInConfigurationType.java  ConfigurationTypeManager.java  ConfigurationUtility.java  ControllerConfiguration.java  DistributorInfo.java  I2cSensor.java  LynxConstants.java  LynxUsbDeviceConfiguration.java  ReadXMLFileHandler.java  WriteXMLFileHandler.java
RobotCore/src/main/java/com/qualcomm/robotcore/hardware/usb/: RobotArmingStateNotifier.java  RobotUsbDevice.java  RobotUsbManagerCombining.java  RobotUsbModule.java
RobotCore/src/main/java/com/qualcomm/robotcore/robocol/: KeepAlive.java  PeerDiscovery.java  PeerDiscoveryManager.java  RobocolConfig.java  RobocolDatagram.java  RobocolDatagramSocket.java
RobotCore/src/main/java/com/qualcomm/robotcore/robot/: Robot.java
RobotCore/src/main/java/com/qualcomm/robotcore/util/: BatteryChecker.java  ClockWarningSource.java  Device.java  GlobalWarningSource.java  ImmersiveMode.java  IncludedFirmwareFileInfo.java  Intents.java  ReadWriteFile.java  RobotLog.java  SoftwareVersionWarningSource.java  Statistics.java  ThreadPool.java  Util.java  Version.java
RobotCore/src/main/java/com/qualcomm/robotcore/wifi/: AccessPointAssistant.java  DriverStationAccessPointAssistant.java  NetworkConnection.java  RobotControllerAccessPointAssistant.java  SoftApAssistant.java  WifiAssistant.java  WifiDirectAssistant.java  WifiDirectAssistantAndroid10Extensions.java
RobotCore/src/main/java/fi/iki/elonen/: NanoHTTPD.java
RobotCore/src/main/res/layout/: activity_permissions_validator.xml  fragment_wifi_mute.xml
RobotCore/src/main/res/raw/: format_convert.bc
RobotCore/src/main/res/values/: values.xml
RobotCore/src/main/rs/: format_convert.rs
Tfod/: CMakeLists.txt  build.gradle
Tfod/src/main/: AndroidManifest.xml
(+1255 files in other folders)
